--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <html>
 <head></head>
-<body><img src="https://easyday.snydle.com/files/2013/01/happy-birthday-cards.jpg" alt="HBD"></body>
+<body><img src="bday(1).png" alt="HBD"></body>
 </html>
