--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
 <head></head>
-<body><img src="bday(1).png" alt="HBD"></body>
+<body>
+    <h1 style="color:pink">Happy Birthday Aashi</h1>
+    <img src="bday(1).png" alt="Happy Birthday Aashi">
+</body>
 </html>
