--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=MedievalSharp" rel="stylesheet"> <!-- font-family: 'MedievalSharp', cursive; -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet"> <!-- font-family: 'Roboto', sans-serif; -->
 	<link href="https://fonts.googleapis.com/css?family=Playball" rel="stylesheet"> <!-- font-family: 'Playball', cursive; -->
