--- a/index.html
+++ b/index.html
@@ -53,12 +53,67 @@
 				  <div class="carousel-inner">
 				    <div class="carousel-item active">
 				      	<div class="galleryContent">
-			     		  <img src="image/image-1.png">
+			     		  <img src="image/01.png">
 			     	  </div> 
 				    </div>
 				    <div class="carousel-item">
 				      <div class="galleryContent">
-			     		  <img src="image/image-1.png">
+			     		  <img src="image/02.png">
+			     	  </div> 
+				    </div>
+				    <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/03.png">
+			     	  </div> 
+				    </div>
+				    <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/04.png">
+			     	  </div> 
+				    </div>
+				    <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/05.png">
+			     	  </div> 
+				    </div>
+				    <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/06.png">
+			     	  </div> 
+				    </div>
+				    <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/07.png">
+			     	  </div> 
+				    </div>
+				    <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/08.png">
+			     	  </div> 
+				    </div>
+				    <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/08.png">
+			     	  </div> 
+				    </div>
+				    <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/10.png">
+			     	  </div> 
+				    </div>
+				    <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/11.png">
+			     	  </div> 
+				    </div>
+				    <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/12.png">
+			     	  </div> 
+				    </div>
+				    <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/13.png">
 			     	  </div> 
 				    </div>
 				    <div class="carousel-item">
@@ -86,16 +141,36 @@
 	     	<div id="wishContent" class="carousel slide" data-ride="carousel">
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
-			      	<p>You have grown up into a beautiful girl. You've already made us so proud, I just know you'll continue to make us even prouder. Have a blissful birthday!</p>
+			      	<p>My love for you is endless, I am so happy to be able to watch how you become older. Happy 1st birthday, let it be funny and great.</p>
 	     			<div class="name"><span>Mummy</span></div>
 			    </div>
 			    <div class="carousel-item">
-			      <p>You have grown up into a beautiful girl. You've already made us so proud, I just know you'll continue to make us even prouder. Have a blissful birthday!</p>
-	     		  <div class="name"><span>Mummy</span></div>
+			      <p>Are you sure that you haven’t learnt how to write yet? Because you carved your name all over my heart since the very day you were born. Happy first birthday.</p>
+	     		  <div class="name"><span>Papa</span></div>
 			    </div>
 			    <div class="carousel-item">
-			      <p>You have grown up into a beautiful girl. You've already made us so proud, I just know you'll continue to make us even prouder. Have a blissful birthday!</p>
-	     		  <div class="name"><span>Mummy</span></div>
+			      <p>You seem to have miraculous powers, little one. You can’t walk or talk but the entire household functions as per your demands. Happy birthday.</p>
+	     		  <div class="name"><span>Dada</span></div>
+			    </div>
+			    <div class="carousel-item">
+			      <p>One of the best things about you at this age is that you have a great sense of humor. You'll laugh at anything silly that I do no matter how many times I do it. Happay Birthday</p>
+	     		  <div class="name"><span>Dadi</span></div>
+			    </div>
+			    <div class="carousel-item">
+			      <p>Tell your mom to stop using your picture as her Facebook profile picture. She's cramping your style. Happy Birthday Aashi</p>
+	     		  <div class="name"><span>Mama</span></div>
+			    </div>
+			    <div class="carousel-item">
+			      <p>I believe in love at first sight, because I have loved you since the moment you were born. Happy 1st birthday.</p>
+	     		  <div class="name"><span>Mausi</span></div>
+			    </div>
+			    <div class="carousel-item">
+			      <p>You'll discover that the best part of birthdays is eating a lot of cake no matter how messy you are. Happy Birthday Aashi.</p>
+	     		  <div class="name"><span>Nana</span></div>
+			    </div>
+			    <div class="carousel-item">
+			      <p>Today is the day of your birthday. Let these first memories will be the brightest and the sweetest for you. Have a happy 1st birthday!</p>
+	     		  <div class="name"><span>Nani</span></div>
 			    </div>
 			  </div>
 			  <a class="carousel-control-prev" href="#wishContent" role="button" data-slide="prev">
