--- a/dev.html
+++ b/dev.html
@@ -89,7 +89,7 @@ var particles = [];
 function drawText() {
 	ctx.clearRect(0, 0, W, H);
 	ctx.fillStyle = "#8800ff";
-	ctx.font = "50px 'Arial', sans-serif";
+	ctx.font = "100'Arial', sans-serif";
 	ctx.textAlign = "center";
 	ctx.fillText(keyword1, W/2, H/5);
 	ctx.fillText(keyword2, W/2, H/3);
