--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
 		     	<div id="galleryContent" class="carousel slide" data-ride="carousel">
 				  <div class="carousel-inner">
 				    <div class="carousel-item active">
+				     <div class="galleryContent">
+			     		  <img src="image/17.png">
+			     	  </div> 
+				    </div>
+				    <div class="carousel-item active">
 				      	<div class="galleryContent">
 			     		  <img src="image/01.png">
 			     	  </div> 
@@ -63,7 +68,7 @@
 				    </div>
 				    <div class="carousel-item">
 				      <div class="galleryContent">
-			     		  <img src="image/03.png">
+			     		  <img src="image/16.png">
 			     	  </div> 
 				    </div>
 				    <div class="carousel-item">
@@ -118,7 +123,57 @@
 				    </div>
 				    <div class="carousel-item">
 				      <div class="galleryContent">
-			     		  <img src="image/image-1.png">
+			     		  <img src="image/image-15.png">
+			     	  </div> 
+				    </div>
+					  <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/image-18.png">
+			     	  </div> 
+				    </div>
+					  <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/image-19.png">
+			     	  </div> 
+				    </div>
+					  <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/image-20.png">
+			     	  </div> 
+				    </div>
+					  <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/image-23.png">
+			     	  </div> 
+				    </div>
+					  <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/image-27.png">
+			     	  </div> 
+				    </div>
+					  <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/image-16.png">
+			     	  </div> 
+				    </div>
+					  <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/image-28.png">
+			     	  </div> 
+				    </div>
+					  <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/image-21.png">
+			     	  </div> 
+				    </div>
+					  <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/image-22.png">
+			     	  </div> 
+				    </div>
+					  <div class="carousel-item">
+				      <div class="galleryContent">
+			     		  <img src="image/image-26.png">
 			     	  </div> 
 				    </div>
 				  </div>
