--- a/index.html
+++ b/index.html
@@ -123,57 +123,57 @@
 				    </div>
 				    <div class="carousel-item">
 				      <div class="galleryContent">
-			     		  <img src="image/image-15.png">
+			     		  <img src="image/15.png">
 			     	  </div> 
 				    </div>
 					  <div class="carousel-item">
 				      <div class="galleryContent">
-			     		  <img src="image/image-18.png">
+			     		  <img src="image/18.png">
 			     	  </div> 
 				    </div>
 					  <div class="carousel-item">
 				      <div class="galleryContent">
-			     		  <img src="image/image-19.png">
+			     		  <img src="image/19.png">
 			     	  </div> 
 				    </div>
 					  <div class="carousel-item">
 				      <div class="galleryContent">
-			     		  <img src="image/image-20.png">
+			     		  <img src="image/20.png">
 			     	  </div> 
 				    </div>
 					  <div class="carousel-item">
 				      <div class="galleryContent">
-			     		  <img src="image/image-23.png">
+			     		  <img src="image/23.png">
 			     	  </div> 
 				    </div>
 					  <div class="carousel-item">
 				      <div class="galleryContent">
-			     		  <img src="image/image-27.png">
+			     		  <img src="image/27.png">
 			     	  </div> 
 				    </div>
 					  <div class="carousel-item">
 				      <div class="galleryContent">
-			     		  <img src="image/image-16.png">
+			     		  <img src="image/16.png">
 			     	  </div> 
 				    </div>
 					  <div class="carousel-item">
 				      <div class="galleryContent">
-			     		  <img src="image/image-28.png">
+			     		  <img src="image/28.png">
 			     	  </div> 
 				    </div>
 					  <div class="carousel-item">
 				      <div class="galleryContent">
-			     		  <img src="image/image-21.png">
+			     		  <img src="image/21.png">
 			     	  </div> 
 				    </div>
 					  <div class="carousel-item">
 				      <div class="galleryContent">
-			     		  <img src="image/image-22.png">
+			     		  <img src="image/22.png">
 			     	  </div> 
 				    </div>
 					  <div class="carousel-item">
 				      <div class="galleryContent">
-			     		  <img src="image/image-26.png">
+			     		  <img src="image/26.png">
 			     	  </div> 
 				    </div>
 				  </div>
