--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 			     		  <img src="image/21.png">
 			     	  </div> 
 				    </div>
-				  <div class="carousel-item active">
+				  <div class="carousel-item">
 				      	<div class="galleryContent">
 			     		  <img src="image/01.png">
 			     	  </div> 
