--- a/bday-wishes.html
+++ b/bday-wishes.html
@@ -23,7 +23,8 @@
             display: block;
             margin: auto;
             white-space: normal;
-            padding: 20px 0;
+            padding: 6px 0;
+            margin-left:0;
             font-size: 40px;
            
         }
